--- a/05_src/.env
+++ b/05_src/.env
@@ -11,7 +11,7 @@ FEATURES_DATA_2=../05_src/data/features/features_assignment.parquet
 DB_URL=postgresql://postgres:HumanAfterAll@localhost:5432/model_db
 ARTIFACTS_DIR=../05_src/data/artifacts/
 
-CREDIT_DATA=../05_src/data/credit/cs-training.csv
+CREDIT_DATA=../../05_src/data/credit/cs-training.csv
 
 LOGISTIC_REGRESSION_PG=./config/logistic_regression_pg.json
 SVM_PG=./config/svm_pg.json
